# pioner

./: .AiDevice.py.swp  .AoDevice.py.swp  .gitignore  .main.py.swo  .main.py.swp  .raw_data.h5  .readthedocs.yaml  AiDevice.py  AoDevice.py  CLAUDE.md  DaqBoard.py  ERRORS.md  README-IR.md  README.md  TODO.md  acquisition_manager.py  ai_device.py  ai_device_handler.py  ai_params.py  analog_params.py  analoginput.py  ao_data_generator.py  ao_data_generators.py  ao_device.py  ao_device_handler.py  ao_params.py  back_requirements.txt  buffer_generator.py  calibration.json  calibration.py  calibration_params.py  code-style guide.md  constants.py  daq_device.py  daq_device_handler.py  daq_params.py  data.h5  debug.py  default_calibration.json  design_notes.md  (+36 more)
back/: ai_device.py  ao_data_generators.py  ao_device.py  ao_params.py  buffer_generator.py  calibration.py  calibration_provider.py  constants.py  daq_device.py  daq_params.py  debug.py  experiment_manager.py  fastheat.py  interpolation.py  iso_mode.py  modulation_params.py  nanocontrol_tango.py  nanocontrol_test.py  new_experiment_manager.py  profile_data.py  profile_table_converter.py  segment_data.py  settings.py  sine_generator.py  slow_mode.py  temp_volt_converters.py  ucal_mode.py  utils.py
data/: .raw_data.h5  exp_data.h5  exp_data_ptt.h5  front_test.h5  raw_data.h5  test.h5
data/raw_data/: raw_data.h5  raw_data_buffer_0.h5  raw_data_buffer_1.h5  raw_data_buffer_2.h5
distr/: howto.txt  libuldaq-1.2.0.tar.bz2  piconfig.md
docs/: Bondar-uCal.md  IR-branch.md  Martin-calibration-procedure.docx  Martin-calibration-procedure.md  design-notes.md  differential-nanocalorimetry.md  hardware-bringup.md  ir-merge-answers.md  ir-merge-questions.md  live-streaming.md  mock-verification.md  modulation.md  pipeline.md  requirements.txt  trigger.md  usb-2637-vs-2627.md
docs/source/: about.md  conf.py  index.rst  installation.md  python_api.rst  usage.rst
front/: AdvancedSetProg.py  CalibWindow.py  ConfigWindow.py  MainWindowUi.py  ProcFastHeatWidget.py  ResultsDataWidget.py  SetProgUI.py  SetProg_widget.py  VirtualDevice.py  calibWindow.py  configWindow.py  constants.py  dataclass.py  functions.py  main.py  mainWindow.py  mainWindowUi.py  messageWindows.py  procFastHeatWidget.py  progSegmentDialog.py  progSegmentTypes.py  progWidget.py  progWidgetAdvanced.py  progWidgetUi.py  requirements.txt  resultsDataWidget.py  segmentdialog.py  settings.py  virtualDevice.py
front/settings/: .settings.json
logs/: supervisor_nanocontrol_http.err
mcc_examples/: MANIFEST.in  PKG-INFO  README.rst  setup.py
mcc_examples/docs/: Makefile  README.txt  api.rst  conf.py  hwov.rst  hwref.inc  index.rst  make.bat  overview.rst
mcc_examples/examples/: .a_in_scan.py.swp  .a_out_scan.py.swp  a_in.py  a_in_scan.py  a_in_scan_iepe.py  a_in_scan_with_events.py  a_in_scan_with_queue.py  a_in_scan_with_trigger.py  (+17 more)
old_nanocal/: operation_schemes.ipynb
pioner-IR-branch/: NONcalibration_01_04_2026.json  Newcalibration_01_04_2026.json  Newcalibration_01_04_2026_late.json  Newcalibration_16_04_2026_late.json  PIONER_Lab.spec  calib01_04  config.json  config.user.json  default_calibration.json  default_calibration1.json  experiment_profile copy.json  ir_16_04  runUI.py
postmortem/: 2026-05-23-differential-vs-defaultio.md  2026-05-23-fifo-overrun-continuous-ai.md  README.md
settings/: .settings.json  calibration.json  default_calibration.json  default_settings.json  settings.json
shared/: constants.py  settings.py  utils.py
test_old/: AiDevice.py  AoDevice.py  cont_ai_ao.py  main.py
tests/: conftest.py  test_acquisition_provider.py  test_acquisition_ring.py  test_apply_calibration.py  test_back_settings.py  test_calibration.py  test_chip_presence.py  test_device_controller.py  test_disk_recorder.py  test_finalize_recording.py  test_logging_setup.py  test_main_window.py  test_mock_uldaq.py  test_modes_e2e.py  test_modulation.py  test_session_stats.py  test_ui_settings.py
utils/: constants.py  data_types.py  profile_data.py  segment_data.py
(+107 files in other folders)
