[build-system]
requires = [
    "setuptools>=61.0", 
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ppioner"
version = "0.0.9"
authors = [
    {name = "awesome author", email = "awesome@author.edu"},
]
description = "Basic software to operate PIONER device (former Nanocal)"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["nanocalorimetry", "DAQ"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "silx>=1.1.2",
    "pytango>=9.4.1",
    "matplotlib>=3.7",
    "pandas>=2.0.2",
    "requests>=2.31.0",
    "sortedcontainers>=2.4.0",
    'importlib-metadata; python_version<"3.8"',
]

[project.optional-dependencies]
server = ["uldaq>=1.2.3",]
gui = ["pyqt5>=5.15.6",]

[project.scripts]
pionerUI = "pioner.runUI:pioner_run_ui"


[tool.setuptools.package-data]
"*" = ["*.json"]